--- a/style.css
+++ b/style.css
@@ -1,17 +1,126 @@
 body {
-	font-family: Arial, sans-serif;
-	padding: 20px;
-}
-.character_list{
-	border: 1px solid #ccc;
-	margin: 10px;
-	border-radius: 7px;
-	display: grid;
-	grid-template-columns: repeat(4, 1fr);
-	padding: 20px ;
-	gap: 5px;
-}
-.charcter
-.character_img{
+	background: rgb(32, 35, 41);
 
+}
+
+.character {
+	/* display: flex;
+	flex-direction: row-reverse; */
+	display: flex;
+	flex-direction: row-reverse;
+
+}
+
+.character_list {
+	/* position: relative;
+	padding: 0.75rem;
+	color: rgb(255, 255, 255);
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+	gap: 50px;
+	list-style-type: none; */
+	display: grid;
+	grid-template-columns: repeat(3, 1fr);
+	gap: 25px;
+	list-style-type: none;
+}
+
+.character__object {
+	/* display: flex;
+	max-width: 450px;
+	background-color: rgba(53, 59, 57, 0.319) ;
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
+	flex-direction: row-reverse;
+	 */
+	background-color: rgba(53, 59, 57, 0.319);
+	border-top-right-radius: 25px;
+	border-bottom-right-radius: 25px;
+	max-width: 300px;
+	width: 100%;
+}
+
+.character_img {
+	/* display: flex;
+	max-width: 200px;
+	width: 100%;
+	height: 100%;
+	margin: 0px;
+	object-position: center center;
+	object-fit: cover;
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px; */
+	border-top-left-radius: 25px;
+	border-bottom-left-radius: 25px;
+	max-width: 200px;
+	width: 100%;
+	height: 100%;
+	
+}
+
+
+.name {
+	font-size: 0.925rem;
+	font-weight: bolder;
+	font-family: DejaVu Sans Mono,
+		monospace;
+	color: aliceblue;
+	padding: 7px;
+
+}
+
+.gender {
+	font-family: DejaVu Sans Mono, monospace;
+	color: rgb(115, 118, 121);
+	padding: 7px;
+	font-size: 1.2rem;
+}
+
+@media screen and (max-width: 1080px) {
+	.character_list {
+		display: grid;
+		grid-template-columns: repeat(2, 1fr);
+		padding: 5px;
+	}
+}
+@media screen and (max-width: 750px) {
+	.character_list {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+	}
+	.character__object{
+		max-width: 500px;
+	}
+	.name{
+		font-size: 1.8rem;
+	}
+}
+@media screen and (max-width: 540px) {
+	.character_list {
+		display: grid;
+		grid-template-columns: repeat(1, 1fr);
+		padding: 5px;
+		align-items: center;
+	}
+	.character__object{
+		max-width: 350px;
+	}
+	.name{
+		font-size: 1.05rem;
+	}
+}
+@media screen and (max-width: 380px) {
+	.character__object{
+		max-width: 200px;
+	}
+	.character_img{
+		max-width: 130px;
+	}
+	.name{
+		font-size: 0.8rem;
+	}
+	.gender{
+		font-size: 0.8rem;
+	}
 }
